# JID-3131-EKGPro

./: .eslintrc.js  .gitignore  CHANGELOG.md  INSTALLGUIDE.md  README.md  RELEASENOTES.md  image_process.py  lint-staged.config.js  package-lock.json  package.json  tailwind.config.ts
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
backend/: README.md  pyproject.toml
backend/app/: __init__.py  constants.py  main.py
backend/app/api/v1/: __init__.py  download.py  upload.py  user.py
backend/app/constants/: constants.py
backend/app/enums/: __init__.py
backend/app/exceptions/: EKGDBException.py  EKGException.py  EKGIdentityException.py  __init__.py
backend/app/models/: RequestModels.py  ResponseModels.py  UserModel.py  __init__.py
backend/app/services/: CognitoService.py  DynamoDBService.py  S3Service.py  __init__.py
src/: image process.py  utils.ts
src/app/: layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/analysis/: page.tsx
src/app/appointment/: page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/patient/: page.tsx
src/app/register/: page.tsx
src/components/Chart/: Chart.tsx  Layers.tsx  SegmentList.tsx  SegmentObject.tsx
src/components/Common/: Header.tsx  Sidebar.tsx
src/components/Main/: Header.tsx  Hero.tsx
src/components/appointment/: AddAppointmentModal.tsx
src/components/patient/: EKGMovable.tsx  (+1 more)
src/constants/: Ekg.ts  Navigation.ts
src/exceptions/: APIException.ts
(+14 files in other folders)
