[tool.poetry]
name = "ekg-api"
version = "0.1.0"
description = "EKG Pro"
authors = ["hwuiwon <hwuiwon.kim@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
boto3 = "^1.28.54"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pylint = "^2.17.5"
ruff = "^0.0.285"
isort = "^5.12.0"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
line-length = 100

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
